# libRustConfig

./: .gitignore  .project  Cargo.toml  README.md
libconfig-sys/: Cargo.toml  README.md
libconfig-sys/src/: lib.rs
src/: config.rs  lib.rs  libconfig-sys.rs  test.rs
