[package]
name = "libconfig-sys"
version = "0.1.0"
authors = ["Ivan Semenkov <ivan@semenkov.pro>"]
edition = "2018"
license = "MIT"
description = "libRustConfig is rust wrapper around libconfig library. Library for processing configuration files."
repository = "https://github.com/isemenkov/librustconfig"
readme = "README.md"
categories = []

[dependencies]
libc = "0.2"
